--- a/_posts/0000-01-02-007Salih2020.md
+++ b/_posts/0000-01-02-007Salih2020.md
@@ -5,5 +5,10 @@ title: "Welcome to our second slide!"
 Your text
 yenilikleri ekledim, 
 
+
+sad 
+asd
+
+
 Added new lines 
 Use the left arrow to go back!
