--- a/_posts/0000-01-02-007Salih2020.md
+++ b/_posts/0000-01-02-007Salih2020.md
@@ -5,9 +5,7 @@ title: "Welcome to our second slide!"
 Your text
 yenilikleri ekledim, 
 
-
-sad 
-asd
+bunlari silip , sildigimi bildiriyorum 
 
 
 Added new lines 
